force-app/main/default/objects/custom_create198__c/custom_create198__c.object-meta.xml
<CustomObject>
    <label>Custom created object198</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects198</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>