force-app/main/default/objects/custom_create198__c/fields/custom_create_198field503__c.field-meta.xml
<CustomField>
    <fullName>custom_create_198field503__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 198field503</label>
    <type>Checkbox</type>
</CustomField>